# Motive-Studio

./: CMakeLists.txt  LICENSSE  README.md
Source/: DrumSounds.h  Main.cpp  MainComponent.cpp  MainComponent.h  RoomSession.cpp  RoomSession.h  WahPlugin.h
Source/motivescript/: MotiveScript.h  MotiveScriptEditor.h  MotiveScriptPlugin.h  ScriptLibraryPanel.h
Source/ui/: ClipInspector.h  DrumConfig.h  MixerPanel.h  PianoRollPanel.h  PlayPanel.h
Source/ui/kit/: Components.cpp  Components.h
